# muffin-kafka

./: .git-commits.yaml  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  tests.py
.github/workflows/: release.yml  tests.yml
muffin_kafka/: __init__.py  plugin.py  types.py
muffin_kafka/consumers/: __init__.py  handlers.py  monitors.py  pool.py  runner.py
tests/: conftest.py  test_consume.py  test_healthcheck.py  test_monitor.py  test_plugin.py  test_produce.py
