[project]
name = "muffin-kafka"
version = "1.0.0"
description = "Kafka Integration for Muffin framework"
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = ["kafka", "asyncio", "asgi", "muffin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
]
dependencies = ["muffin", "aiokafka[lz4]"]

[project.urls]
Homepage = "https://github.com/klen/muffin-kafka"
Repository = "https://github.com/klen/muffin-kafka"

[dependency-groups]
dev = ["ipdb", "pre-commit", "pytest", "pytest-aio", "ruff", "pyrefly"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = "muffin_kafka"
module-root = ""

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-lxsv"
log_cli = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313,py314,pypy311

[testenv]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
include = ["muffin-kafka/*.py"]
fix = true
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A003",
  "ANN",
  "D",
  "DJ",
  "EM",
  "G004",
  "N804",
  "PLR0912",
  "PLR2004",
  "RET",
  "RSE",
  "S101",
  "SLF",
  "TRY003",
  "UP",
]

[tool.pyrefly]
project-includes = ["muffin_kafka"]
project-excludes = ["tests", "pyproject.toml"]

[tool.bumpversion]
current_version = "1.0.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
